--- a/Beehive/Classes/Modules/Mine/Controller/LLBeeVIPViewController.xib
+++ b/Beehive/Classes/Modules/Mine/Controller/LLBeeVIPViewController.xib
@@ -114,7 +114,7 @@
                         <constraint firstAttribute="height" constant="125" id="ud7-VN-rwi"/>
                     </constraints>
                 </view>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="开通蜂巢勋章VIP后，你将享受VIP特权高佣金特权，更多优惠活动等着您哦" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="msW-Po-hhU">
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="开通蜂巢勋章VIP后，你将享受VIP特权高佣金特权，更多优惠活动等着您哦" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="msW-Po-hhU">
                     <rect key="frame" x="60" y="159" width="250" height="29"/>
                     <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="12"/>
                     <color key="textColor" red="0.46274509803921571" green="0.50196078431372548" blue="0.99607843137254903" alpha="1" colorSpace="calibratedRGB"/>
